--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -1,30 +1,31 @@
 .navbar {
-	width: 100%;
-	height: 80px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0 1rem;
-	z-index: 2;
-	position: absolute;
-	
-}
-.navbar-bg {
-    background-color: #f5f5f5;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    z-index: 2;
+    position: absolute;
 }
 
+/* .navbar-bg {
+    background-color: #f5f5f5;
+} */
 
 .nav-menu {
-	display: flex;
+    display: flex;
 }
 
 li {
-	padding: 0 1rem;
+    padding: 0 1rem;
 }
+
 .hamburger {
-	display: none;
-	/* padding: 1rem; */
+    display: none;
+    /* padding: 1rem; */
 }
+
 .mobile-menu {
     display: none;
 }
@@ -34,18 +35,30 @@ li {
     cursor: pointer;
 }
 
-@media screen and (max-width:940px){
+
+
+@media screen and (max-width: 940px){
 	.mobile-menu {
 		display: flex;
-		flex-direction: column;
-		width: 100%;
-		top: 0;
-		left: 0;
-		position: absolute;
-		justify-content: space-between;
-		align-items: center;
-		/* color: rgba(250,255,255,.95); */
-		background-color: #f5f5f5;
+        flex-direction: column;
+        width: 100%;
+        top: -100vh;
+        left: 0;
+        position: absolute;
+        justify-content: space-between;
+        background-color: #f5f5f5;
+        transition: 0.3s;
+        color: #000;
+	}
+
+	.active {
+		top: 80px;
+	}
+
+	.mobile-menu li{
+		padding: 1.2rem 1rem;
+        margin: 0 1rem;
+        border-bottom: 1px solid #ccc;
 	}
 
 	.mobile-nav {
@@ -58,7 +71,19 @@ li {
 		padding: 1rem 0;
 	}
 
-
+	.social-icons {
+		display: flex;
+		justify-content: space-around;
+		margin: 2rem 0;
+	}
+	.social-icons .icon:hover{
+		transform: scale(1.5);
+		transition: 0.3s;
+	}
+	.mobile-menu button {
+        margin: 1rem;
+        width: 90%;
+    }
 	
 	.nav-menu {
 		display: none;
