--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -7,11 +7,12 @@
     padding: 0 1rem;
     z-index: 2;
     position: absolute;
+	color: #fff;
 }
 
-/* .navbar-bg {
+.navbar-bg {
     background-color: #f5f5f5;
-} */
+}
 
 .nav-menu {
     display: flex;
@@ -19,6 +20,7 @@
 
 li {
     padding: 0 1rem;
+	font-size: 1.3rem;
 }
 
 .hamburger {
@@ -47,8 +49,12 @@ li {
         position: absolute;
         justify-content: space-between;
         background-color: #f5f5f5;
-        transition: 0.3s;
+        transition: 0.8s;
         color: #000;
+	}
+
+	.dark {
+		color: #000;
 	}
 
 	.active {
